fix gap

--- a/src/sass/pages/hotel/_room-for-2.scss
+++ b/src/sass/pages/hotel/_room-for-2.scss
@@ -45,19 +45,19 @@
   }
 
   @include tablet {
-    position: absolute;
-    right: 112px;
-    top: -32px;
+    position: relative;
+    top: -96px;
+    left: 37px;
     box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
   }
 
   @include desktop {
-    right: 185px;
+    left: 149px;
   }
 }
 
 .hotel-wrap-bottom {
-  position: relative;
+  // position: relative;
   @include tablet {
     display: flex;
     align-items: center;
@@ -87,7 +87,11 @@
 }
 
 .hotel-room-slider {
+  display: flex;
+  gap: 16px;
+  flex-direction: row-reverse;
   @include tablet {
+    gap: 40px;
     max-width: 428px;
   }
 
@@ -127,12 +131,12 @@
 
   @include tablet {
     top: 40px;
+    left: 331px;
   }
 
   @include desktop {
     top: 48px;
     left: 450px;
-    fill: $colorTextModal;
   }
 }
 
